--- a/package.json
+++ b/package.json
@@ -3,25 +3,33 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
-    "@types/jest": "^26.0.20",
-    "@types/node": "^14.14.28",
-    "@types/react": "^17.0.2",
-    "@types/react-dom": "^17.0.1",
+    "@fortawesome/fontawesome-svg-core": "^1.2.35",
+    "@fortawesome/free-solid-svg-icons": "^5.15.3",
+    "@fortawesome/react-fontawesome": "^0.1.14",
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^11.2.7",
+    "@testing-library/user-event": "^12.8.3",
+    "@types/jest": "^26.0.24",
+    "@types/node": "^14.17.5",
+    "@types/react": "^17.0.14",
+    "@types/react-dom": "^17.0.9",
     "axios": "^0.21.1",
-    "mobx": "^6.1.7",
-    "mobx-react": "^7.1.0",
+    "font-awesome": "^4.7.0",
+    "mobx": "^6.3.2",
+    "mobx-react": "^7.2.0",
     "node-sass": "^5.0.0",
     "prop-types": "^15.7.2",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-js-pagination": "^3.0.3",
+    "react-markdown": "^6.0.2",
+    "react-multi-carousel": "^2.6.3",
+    "react-responsive-carousel": "^3.2.20",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
     "sinon": "^9.2.4",
-    "typescript": "^4.1.5",
-    "web-vitals": "^1.0.1"
+    "typescript": "^4.3.5",
+    "web-vitals": "^1.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -50,6 +58,6 @@
   "devDependencies": {
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.6",
-    "enzyme-to-json": "^3.6.1"
+    "enzyme-to-json": "^3.6.2"
   }
 }
