--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-js-pagination": "^3.0.3",
     "react-markdown": "^6.0.2",
     "react-multi-carousel": "^2.6.3",
