--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react": "^17.0.14",
     "@types/react-dom": "^17.0.9",
     "axios": "^0.21.1",
+    "dotenv": "^10.0.0",
     "font-awesome": "^4.7.0",
     "mobx": "^6.3.2",
     "mobx-react": "^7.2.0",
@@ -60,5 +61,6 @@
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.6",
     "enzyme-to-json": "^3.6.2"
-  }
+  },
+  "homepage": "https://production.hrfactor.rs/"
 }
